fixed margin on main page and z-index on navbar

--- a/frontend/src/components/MainPage/MainPage.css
+++ b/frontend/src/components/MainPage/MainPage.css
@@ -70,6 +70,10 @@
     margin: 10px;
 }
 
+#splash-statistics { 
+    margin-bottom: 150px;
+}
+
 
 
 
